tests/sksl/errors/DoTypeMismatch.dsl.glsl
### Compilation failed:

error: expected 'bool', but found 'float2'

1 error
